Pictures added of Match

--- a/app/src/main/res/layout/activity_match_org_list.xml
+++ b/app/src/main/res/layout/activity_match_org_list.xml
@@ -191,12 +191,12 @@
             app:layout_constraintTop_toBottomOf="@+id/tournament_name_31" />
 
         <ImageView
-            android:id="@+id/match2_team2_img"
+            android:id="@+id/match3_team1_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/team1" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -207,12 +207,12 @@
             android:text="Legends" />
 
         <ImageView
-            android:id="@+id/match2_team1_img"
+            android:id="@+id/match3_team2_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/team2" />
 
         <TextView
             android:id="@+id/match2_team1_name"
@@ -270,12 +270,12 @@
             app:layout_constraintTop_toBottomOf="@+id/tournament_name_31" />
 
         <ImageView
-            android:id="@+id/match2_team2_img"
+            android:id="@+id/match3_team1_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/team3" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -286,12 +286,12 @@
             android:text="Legends" />
 
         <ImageView
-            android:id="@+id/match2_team1_img"
+            android:id="@+id/match3_team2_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/team4" />
 
         <TextView
             android:id="@+id/match2_team1_name"
@@ -349,12 +349,12 @@
             app:layout_constraintTop_toBottomOf="@+id/tournament_name_31" />
 
         <ImageView
-            android:id="@+id/match2_team2_img"
+            android:id="@+id/match3_team1_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/team5" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -365,12 +365,12 @@
             android:text="Legends" />
 
         <ImageView
-            android:id="@+id/match2_team1_img"
+            android:id="@+id/match3_team2_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/team6" />
 
         <TextView
             android:id="@+id/match2_team1_name"
