--- a/app/src/main/res/layout/activity_match_details.xml
+++ b/app/src/main/res/layout/activity_match_details.xml
@@ -165,12 +165,12 @@
         app:layout_constraintVertical_bias="0.303">
 
         <ImageView
-            android:id="@+id/match2_team2_img"
+            android:id="@+id/match3_team1_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/team1" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -181,12 +181,12 @@
             android:text="Legends" />
 
         <ImageView
-            android:id="@+id/match2_team1_img"
+            android:id="@+id/match3_team2_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/team2" />
 
         <TextView
             android:id="@+id/match2_team1_name"
