--- a/app/src/main/res/layout/activity_tournament_org_list.xml
+++ b/app/src/main/res/layout/activity_tournament_org_list.xml
@@ -150,6 +150,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="56dp"
         android:clickable="true"
+        android:onClick="add_tournament"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -191,6 +192,7 @@
             android:layout_marginStart="150dp"
             android:layout_marginTop="50dp"
             android:backgroundTint="@color/grey"
+            android:onClick="edit_tournament"
             android:text="@string/edit"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
