--- a/app/src/main/res/layout/activity_game_create.xml
+++ b/app/src/main/res/layout/activity_game_create.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".game_create">
 
-      <!-- nav bar -->
+    <!-- nav bar -->
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -113,25 +113,28 @@
         android:layout_width="227dp"
         android:layout_height="38dp"
         android:layout_marginStart="66dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginBottom="12dp"
         android:ems="10"
         android:hint="@string/create_name"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <EditText
         android:id="@+id/key_region"
         android:layout_width="229dp"
         android:layout_height="38dp"
-        android:layout_marginStart="66dp"
         android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="@string/key_region"
         android:inputType="textPersonName"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -139,21 +142,24 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="24dp"
         android:text="@string/create_region"
-        app:layout_constraintBottom_toTopOf="@+id/key_region"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.187"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
     <EditText
         android:id="@+id/descript_key"
         android:layout_width="227dp"
         android:layout_height="38dp"
-        android:layout_marginStart="66dp"
         android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Description"
         android:inputType="textPersonName"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descript" />
 
@@ -161,11 +167,11 @@
         android:id="@+id/descript"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="24dp"
         android:text="@string/create_des"
-        app:layout_constraintBottom_toTopOf="@+id/descript_key"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.168"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/key_region" />
 
@@ -173,25 +179,24 @@
         android:id="@+id/min_tm_key"
         android:layout_width="230dp"
         android:layout_height="39dp"
-        android:layout_marginStart="66dp"
-        android:layout_marginEnd="97dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Min Teams"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/max_tm"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/min_key" />
 
     <TextView
         android:id="@+id/min_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="24dp"
         android:text="@string/create_min_teams"
-        app:layout_constraintBottom_toTopOf="@+id/min_tm_key"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descript_key" />
 
@@ -199,57 +204,49 @@
         android:id="@+id/editTextTextPersonName5"
         android:layout_width="236dp"
         android:layout_height="39dp"
-        android:layout_marginStart="66dp"
-        android:layout_marginEnd="91dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Max Teams"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView9"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.525"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/max_tm" />
 
     <TextView
         android:id="@+id/max_tm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="16dp"
         android:text="@string/create_maxteams"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.171"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/min_tm_key" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginEnd="215dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="20dp"
         android:text="@string/create_image"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:backgroundTint="@color/grey"
+        app:layout_constraintHorizontal_bias="0.197"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="519dp"
-        tools:text="@string/create_Addimage" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
 
     <TextView
         android:id="@+id/create_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginEnd="286dp"
+        android:layout_marginTop="16dp"
         android:text="@string/create_heading"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.111"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -257,20 +254,38 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="28dp"
         android:text="@string/enter_name"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.188"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create_heading" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
         android:backgroundTint="@color/grey"
         android:text="@string/create_Submit"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="579dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:backgroundTint="@color/grey"
+        android:text="@string/create_Addimage"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
